--- a/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
@@ -1,38 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Blazor.WebDAV.AudioPlayer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Util\**" />
-    <Content Remove="Util\**" />
-    <EmbeddedResource Remove="Util\**" />
-    <None Remove="Util\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Audio\IPlayerFactory.cs" />
-    <Compile Remove="Audio\PlayerFactory.cs" />
-    <Compile Remove="Client\IWebDavClientFactory.cs" />
-    <Compile Remove="Client\WebDavClientFactory.cs" />
-    <Compile Remove="Components\Howl.cs" />
-    <Compile Remove="Components\HowlErrorEventArgs.cs" />
-    <Compile Remove="Components\HowlEventArgs.cs" />
-    <Compile Remove="Components\HowlPlayEventArgs.cs" />
-    <Compile Remove="Components\IHowl.cs" />
-    <Compile Remove="Components\IHowlEvents.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="ByteSize" Version="2.0.0" />
-    <PackageReference Include="Howler.Blazor" Version="0.9.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+    <PackageReference Include="ByteSize" Version="2.1.1" />
+    <PackageReference Include="Howler.Blazor" Version="0.9.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <PackageReference Include="WebDAV-Client" Version="1.0.3" />
-    <PackageReference Include="z440.atl.core" Version="3.3.0" />
+    <PackageReference Include="WebDAV-Client" Version="1.1.2" />
+    <PackageReference Include="z440.atl.core" Version="5.12.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,9 +32,5 @@
     <Folder Include="IO\" />
     <Folder Include="Extensions\" />
   </ItemGroup>
-
-  <!--<ItemGroup>
-    <ProjectReference Include="..\..\..\Howler.Blazor\src\Howler.Blazor\Howler.Blazor.csproj" />
-  </ItemGroup>-->
 
 </Project>
