--- a/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Blazor.WebDAV.AudioPlayer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ByteSize" Version="1.3.0" />
+    <PackageReference Include="ByteSize" Version="2.1.1" />
     <PackageReference Include="CSCore" Version="1.2.1.2" />
     <PackageReference Include="CSCore.Ogg" Version="1.0.0" />
     <PackageReference Include="CSCore.Opus" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
-    <PackageReference Include="WebDAV-Client" Version="1.0.3" />
-    <PackageReference Include="z440.atl.core" Version="2.14.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="WebDAV-Client" Version="1.1.2" />
+    <PackageReference Include="z440.atl.core" Version="5.12.0" />
   </ItemGroup>
 
   <ItemGroup>
